# sdl_audio

./: CMakeLists.txt  main.cpp  sdl_audio.cpp  sdl_audio.h  setup.h
SDL2-2.0.8_prebuilt_windows/x64/Debug/: SDL2main.lib
SDL2-2.0.8_prebuilt_windows/x64/Release/: SDL2.lib  SDL2main.lib
